--- a/New Training/Statistics.ipynb
+++ b/New Training/Statistics.ipynb
@@ -14,8 +14,8 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "\n",
-    "data1 = np.random.lognormal(100,0.2, 1000)\n",
-    "data2 = np.random.lognormal(105,0.2, 1000)\n",
+    "data1 = np.random.lognormal(100, 0.2, 1000)\n",
+    "data2 = np.random.lognormal(105, 0.2, 1000)\n",
     "sns.histplot(data1)"
    ],
    "outputs": [
